@@ -17,6 +17,8 @@ Enhancements:
     rollback operation, as well as a remaining duration estimate and a 
     percentage of work already done. emaj_adm and emaj_viewer roles can call 
     it.
+  - a new client, emajRollbackMonitor.php, is provided to monitor E-Maj 
+    rollback operations that are currently in progress.
   - at create_group() or alter_group() time, a check is added to be sure no 
     temporary tables and no unlogged tables are recorded into tables groups.
     Some other tests on tables groups content have been enforced too.
